Unused space 

#Release notes - v0.3

Fixes

- Sometimes you cant complete the room even defeating all enemies
- Removed unused rewards
- Broken tiles in some rooms

Changes

- Game starts with 1hp more
- Support for WASD controls
- Controls tutorial
- Now only one secret room is spawned per run.
- Removed signs for now (until implemented)

#Release notes - v0.2

Fixes

- Removed unused rewards
- Broken tiles in some rooms

Changes

- Now only one secret room is spawned per run.
- Removed signs for now (until implemented)

#Release notes - v0.1

Fixes

- Sometimes you cant complete the room even defeating all enemies