@@ -1,6 +1,9 @@
-Unused space 
+// # character is used to separate pages 
+// Unused space until first #
 
 #Release notes - v0.3
+
+// first version without bugs
 
 Fixes
 
@@ -29,6 +32,7 @@ Changes
 - Removed signs for now (until implemented)
 
 #Release notes - v0.1
+// this is the version released for the GBJAM
 
 Fixes
 
